Code break down and optimizations